pilar3-despliegue/kubernetes/applications/nct-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nct
  namespace: voxchain
  labels:
    component: nct
spec:
  selector:
    component: nct
  ports:
    - port: 8080
      targetPort: 8080
      name: health
