pilar3-despliegue/kubernetes/applications/voxchain-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voxchain-api
  namespace: voxchain
spec:
  selector:
    app: voxchain-api
  ports:
    - port: 8000
      targetPort: 8000
      name: http
