pilar3-despliegue/kubernetes/applications/voxchain-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voxchain-api
  namespace: voxchain
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - http:
        paths:
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: voxchain-api
                port:
                  number: 8000
