pilar3-despliegue/kubernetes/applications/voxchain-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voxchain-frontend
  namespace: voxchain
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: voxchain-frontend
                port:
                  number: 80
