pilar3-despliegue/kubernetes/applications/voxchain-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voxchain
  namespace: voxchain
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - voxchain.34.95.143.13.sslip.io
        - grafana.voxchain.34.95.143.13.sslip.io
      secretName: voxchain-tls
  rules:
    - host: voxchain.34.95.143.13.sslip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: voxchain-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voxchain-frontend
                port:
                  number: 80
    - host: grafana.voxchain.34.95.143.13.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
